clusters/on-prem-cluster/apps/tftp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tftpd-hpa-service
  namespace: tftpd-hpa
spec:
  selector:
    app: tftpd-hpa
  ports:
    - protocol: UDP
      port: 69
      targetPort: 69
