clusters/on-prem-cluster/apps/tftp/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tftpd-hpa-ingress
    namespace: tftpd-hpa
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
        traefik.ingress.kubernetes.io/router.middlewares: tftpd-hpa-ingress-ipwhitelist@kubernetescrd
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:btk5TYiNHPQFsUcAgzlrvHISp9K+,iv:KiahxoiMjVwT7xCECSeYEsTLVJweRt+olvAkV7Yyfr4=,tag:LiWBDFWtkyL8OytBTrk2fQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:CfR4xAJy+aOGfz+eW/ZlcJCZWLDb,iv:QKZ3oOIV0EYYdLMNEDraKzHn8wOvTCUkHDX8L2LjG6E=,tag:M46JBM9Kk21xocKLzZqY6w==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: tftpd-hpa-service
                        port:
                            number: 69
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWWlEwbDk3Yk84Y1A3M3NG
[...]
            SSnXCwCxDffMgjoqeQCWSJT+Mium+6OEIyAmOK+M/YEAicwoxw0mVQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-09-03T14:20:56Z"
    mac: ENC[AES256_GCM,data:tDUVwx+DISIN6m5pUm+pgM2P3mzJYXLNtuvI4hXL73YkyenpriyfIjP2KKDOGl8yiqQhNmQMbT94VPX4mNXhf4ms4GcXOlLFiIFTR1k+Mi9MhZY89bUSYKreY47Di7FNxGzG9xHpg2KNjCQTQtInmelRScbgsnpzBTuIJbBLyrc=,iv:N0IsnCBeQl9px4WbEXotdw4zxlSFEGWo4xZYWfKnLoM=,tag:Dz583vpaDHURASyq56w/AQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
